# ascii-video-player

./: CMakeLists.txt  Makefile  README.md
src/: colors.h  main.cpp  play_video.cpp  play_video.h  terminal_size.cpp  terminal_size.h  utils.cpp  utils.h
